--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ nav span{
 
 .b-hp{
     position: relative;
-    top:12rem;
+    top:9rem;
     width: 100%;
 }
 
@@ -116,9 +116,9 @@ nav span{
     transform: translateX(-50%);
 }
 
-@media (max-width:430px) {
+@media (max-width:475px) {
     .schedule{
-        bottom: 0;
+        bottom: 2%;
     }
     header{
         height: 110vh;
